Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <p>The most interesting linkup game for android.
 最好玩的Android开源连连看</p>
 
-<p><img src="http://d.pcs.baidu.com/thumbnail/a77f45be76f7c9fdcad486252f7d7d4d?fid=2551064855-250528-75651828421855&amp;time=1399536133&amp;sign=FDTAER-DCb740ccc5511e5e8fedcff06b081203-R5z43cBKiP8v6PRQP9WkYyyLR38%3D&amp;rt=sh&amp;expires=8h&amp;r=589611914&amp;sharesign=unknown&amp;size=c710_u500&amp;quality=100" alt="休闲连连看"></p>
+<p><img src="https://github.com/csuyzb/AndroidLinkup/raw/master/welcome.jpg" alt="welcome"><img src="https://github.com/csuyzb/AndroidLinkup/raw/master/level.jpg" alt="level"></p>
 
 <p>V1.2.0 规划
 1.支持多种图标，表情，水果，宠物
@@ -52,8 +52,7 @@
 5.连击等动画调整</p>
 
 <p>V1.0.0
-1.创建游戏
-休闲连连看 <a href="https://github.com/360" class="user-mention">@360</a>手机助手 @应用宝 @百度手机助手 @豌豆荚 <a href="https://github.com/91" class="user-mention">@91</a>助手</p>
+1.创建游戏</p>
         </section>
 
         <aside id="sidebar">
