Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,23 +36,37 @@
 <p>The most interesting linkup game for android.
 最好玩的Android开源连连看</p>
 
-<p><img src="https://github.com/csuyzb/AndroidLinkup/raw/master/welcome.jpg" alt="welcome"><img src="https://github.com/csuyzb/AndroidLinkup/raw/master/level.jpg" alt="level"></p>
+<p>项目主页:<a href="http://csuyzb.github.io/AndroidLinkup">http://csuyzb.github.io/AndroidLinkup</a></p>
 
-<p>V1.2.0 规划
-1.支持多种图标，表情，水果，宠物
-2.更多关卡，优化关卡设计
-3.优化消除，路径等动画
-4.适配更多机型，平板 </p>
+<p><img src="https://github.com/csuyzb/AndroidLinkup/raw/master/welcome.jpg" alt="welcome"><img src="https://github.com/csuyzb/AndroidLinkup/raw/master/face.jpg" alt="face"><img src="https://github.com/csuyzb/AndroidLinkup/raw/master/classic.jpg" alt="classic"></p>
 
-<p>V1.1.0
+<p>v1.3.0 规划
+1.支持闯关，计时，无限模式
+2.增加网络排行榜
+3.支持QQ和新浪微博登录
+4.支持分享到新浪微博和微信</p>
+
+<p>v1.2.0(2014-5-20 完成）
+1.支持多种图标，表情、经典和水果
+2.增加关卡，优化关卡设计
+3.优化动画，界面更炫更流畅
+4.集成AdsSdk</p>
+
+<p>休闲连连看 @豌豆荚 @小米应用商店 <a href="https://github.com/360" class="user-mention">@360</a>手机助手 @应用宝 @百度手机助手 @安卓市场</p>
+
+<p>v1.1.0(2014-5-8 完成）
 1.美化界面
 2.调整关卡设计，全新45关
 3.增加音乐和音效控制
 4.提示和重排次数控制
 5.连击等动画调整</p>
 
-<p>V1.0.0
+<p>休闲连连看 @小米应用商店 <a href="https://github.com/360" class="user-mention">@360</a>手机助手 @应用宝 @百度手机助手 @安卓市场</p>
+
+<p>v1.0.0(2014-4-22 完成）
 1.创建游戏</p>
+
+<p>休闲连连看 <a href="https://github.com/360" class="user-mention">@360</a>手机助手 @应用宝 @百度手机助手 @豌豆荚 <a href="https://github.com/91" class="user-mention">@91</a>助手</p>
         </section>
 
         <aside id="sidebar">
