Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
 
 <p>项目主页:<a href="http://csuyzb.github.io/AndroidLinkup">http://csuyzb.github.io/AndroidLinkup</a></p>
 
-<p><img src="https://github.com/csuyzb/AndroidLinkup/raw/master/welcome.jpg" alt="welcome"><img src="https://github.com/csuyzb/AndroidLinkup/raw/master/face.jpg" alt="face"><img src="https://github.com/csuyzb/AndroidLinkup/raw/master/classic.jpg" alt="classic"></p>
+<p>应用商店:<a href="http://app.xiaomi.com/detail/61473">http://app.xiaomi.com/detail/61473</a></p>
+
+<p><img src="https://github.com/csuyzb/AndroidLinkup/raw/master/screenshots/welcome.jpg" alt="welcome"><img src="https://github.com/csuyzb/AndroidLinkup/raw/master/screenshots/face.jpg" alt="face"><img src="https://github.com/csuyzb/AndroidLinkup/raw/master/screenshots/classic.jpg" alt="classic"></p>
 
 <p>v1.3.0 规划
 1.支持闯关，计时，无限模式
